test/scc_test/decl/semantic-errors/001.t
int a;
static int a;